WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20725
GTK_WINDOW_HWND not GTK_WINDOWING_HWND
https://bugs.webkit.org/show_bug.cgi?id=20725
Summary
GTK_WINDOW_HWND not GTK_WINDOWING_HWND
Luke Kenneth Casson Leighton
Reported
2008-09-08 07:20:18 PDT
Index: WebCore/plugins/gtk/PluginViewGtk.cpp =================================================================== --- WebCore/plugins/gtk/PluginViewGtk.cpp (revision 36129) +++ WebCore/plugins/gtk/PluginViewGtk.cpp (working copy) @@ -447,7 +447,7 @@ *((XID *)w) = GDK_WINDOW_XWINDOW(containingWindow()->window); #endif #ifdef GDK_WINDOWING_WIN32 - *((HWND *)w) = GDK_WINDOWING_HWND(containingWindow()->window); + *((HWND *)w) = GDK_WINDOW_HWND(containingWindow()->window); #endif return NPERR_NO_ERROR; }
Attachments
HWND issue
(955 bytes, patch)
2008-09-08 07:59 PDT
,
Luke Kenneth Casson Leighton
darin
: review-
Details
Formatted Diff
Diff
ChangeLog and updated to ToT
(1.67 KB, patch)
2008-10-05 14:41 PDT
,
Jan Alonzo
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Luke Kenneth Casson Leighton
Comment 1
2008-09-08 07:25:10 PDT
actually there's a compile error with that: ebCore/plugins/gtk/PluginViewGtk.cpp: In member function ‘NPError WebCore::PluginView::getValue(NPNVariable, void*)’: WebCore/plugins/gtk/PluginViewGtk.cpp:450: error: invalid conversion from ‘void*’ to ‘HWND__*’ ./JavaScriptCore/wtf/OwnPtr.h: In function ‘void WTF::deleteOwnedPtr(T*) [with T = WebCore::PluginMessageThrottlerWin]’: ./JavaScriptCore/wtf/OwnPtr.h:69: instantiated from ‘WTF::OwnPtr<T>::~OwnPtr() [with T = WebCore::PluginMessageThrottlerWin]’ WebCore/plugins/gtk/PluginViewGtk.cpp:479: instantiated from here ./JavaScriptCore/wtf/OwnPtr.h:49: error: invalid application of ‘sizeof’ to incomplete type ‘WebCore::PluginMessageThrottlerWin’ ./JavaScriptCore/wtf/OwnPtr.h:49: error: creating array with negative size (‘-0x00000000000000001’) ./JavaScriptCore/wtf/OwnPtr.h:50: error: invalid application of ‘sizeof’ to incomplete type ‘WebCore::PluginMessageThrottlerWin’ ./JavaScriptCore/wtf/OwnPtr.h:50: error: creating array with negative size (‘-0x00000000000000001’) ./JavaScriptCore/wtf/OwnPtr.h:51: warning: possible problem detected in invocation of delete operator: ./JavaScriptCore/wtf/OwnPtr.h:47: warning: ‘ptr’ has incomplete type ./WebCore/plugins/PluginView.h:67: warning: forward declaration of ‘struct WebCore::PluginMessageThrottlerWin’ ./JavaScriptCore/wtf/OwnPtr.h:51: note: neither the destructor nor the class-specific operator delete will be called, even if they are declared when the class is defined. WebCore/plugins/gtk/PluginViewGtk.cpp: At global scope: WebCore/plugins/gtk/PluginViewGtk.cpp:495: warning: ‘gboolean WebCore::plug_removed_cb(GtkSocket*, void*)’ defined but not used
Luke Kenneth Casson Leighton
Comment 2
2008-09-08 07:59:10 PDT
Created
attachment 23260
[details]
HWND issue got a compile - no idea if it works (will find out soon enough...)
Darin Adler
Comment 3
2008-09-21 13:48:06 PDT
Comment on
attachment 23260
[details]
HWND issue This patch includes no ChangeLog. The code change looks fine. I'm going to say review- to get this out of the review queue, since it does need a ChangeLog.
Jan Alonzo
Comment 4
2008-10-05 14:41:04 PDT
Created
attachment 24103
[details]
ChangeLog and updated to ToT ChangeLog added as requested by Darin. Also updated the patch to match ToT.
Dave Hyatt
Comment 5
2008-10-05 14:46:06 PDT
Comment on
attachment 24103
[details]
ChangeLog and updated to ToT r=me
Jan Alonzo
Comment 6
2008-10-05 14:57:24 PDT
Thanks for the review. Landed in
r37319
Luke Kenneth Casson Leighton
Comment 7
2008-10-06 02:38:41 PDT
there are quite a few like this. little things that got caught with cross-compilation under mingw32, which were a bit lairy.
Alberto Garcia
Comment 8
2013-09-11 00:31:25 PDT
***
Bug 20727
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug