2008-10-05  Luke Kenneth Casson Leighton  <lkcl@lkcl.net>

Reviewed by David Hyatt.

        GTK_WINDOW_HWND not GTK_WINDOWING_HWND
        https://bugs.webkit.org/show_bug.cgi?id=20725

        Updated to ToT by Jan Alonzo.

        * plugins/gtk/PluginViewGtk.cpp:
        (WebCore::PluginView::getValue):

Canonical link: https://commits.webkit.org/29575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37319 268f45cc-cd09-0410-ab3c-d52691b4dbfc